--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,37 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+Generator/Makefile
+Generator/nbproject/configurations.xml
+Generator/nbproject/Makefile-Debug.mk
+Generator/nbproject/Makefile-impl.mk
+Generator/nbproject/Makefile-Release.mk
+Generator/nbproject/Makefile-variables.mk
+Generator/nbproject/Package-Debug.bash
+Generator/nbproject/Package-Release.bash
+Generator/nbproject/project.xml
+Generator/nbproject/private/c_standard_headers_indexer.c
+Generator/nbproject/private/configurations.xml
+Generator/nbproject/private/cpp_standard_headers_indexer.cpp
+Generator/nbproject/private/launcher.properties
+Generator/nbproject/private/Makefile-variables.mk
+Generator/nbproject/private/private.xml
+Spielfeld_Ausgabe/main.c
+Spielfeld_Ausgabe/Makefile
+Spielfeld_Ausgabe/build/Debug/Cygwin-Windows/main.o
+Spielfeld_Ausgabe/build/Debug/Cygwin-Windows/main.o.d
+Spielfeld_Ausgabe/dist/Debug/Cygwin-Windows/spielfeld_ausgabe.exe
+Spielfeld_Ausgabe/nbproject/configurations.xml
+Spielfeld_Ausgabe/nbproject/Makefile-Debug.mk
+Spielfeld_Ausgabe/nbproject/Makefile-impl.mk
+Spielfeld_Ausgabe/nbproject/Makefile-Release.mk
+Spielfeld_Ausgabe/nbproject/Makefile-variables.mk
+Spielfeld_Ausgabe/nbproject/Package-Debug.bash
+Spielfeld_Ausgabe/nbproject/Package-Release.bash
+Spielfeld_Ausgabe/nbproject/project.xml
+Spielfeld_Ausgabe/nbproject/private/c_standard_headers_indexer.c
+Spielfeld_Ausgabe/nbproject/private/configurations.xml
+Spielfeld_Ausgabe/nbproject/private/cpp_standard_headers_indexer.cpp
+Spielfeld_Ausgabe/nbproject/private/launcher.properties
+Spielfeld_Ausgabe/nbproject/private/Makefile-variables.mk
+Spielfeld_Ausgabe/nbproject/private/private.xml
