changed gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ Spielfeld_Ausgabe/nbproject/private/cpp_standard_headers_indexer.cpp
 Spielfeld_Ausgabe/nbproject/private/launcher.properties
 Spielfeld_Ausgabe/nbproject/private/Makefile-variables.mk
 Spielfeld_Ausgabe/nbproject/private/private.xml
+Generator/gdb.exe.stackdump
