--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Spielfeld_Ausgabe/nbproject/private/launcher.properties
 Spielfeld_Ausgabe/nbproject/private/Makefile-variables.mk
 Spielfeld_Ausgabe/nbproject/private/private.xml
 Generator/gdb.exe.stackdump
+Generator/generator.exe.stackdump
